--- a/Joao_Lazaro/calculadoramvc/src/main/resources/META-INF/resources/index.html
+++ b/Joao_Lazaro/calculadoramvc/src/main/resources/META-INF/resources/index.html
@@ -235,10 +235,10 @@
                         <div class="app-details">
                             <h5>Application</h5>
                             <ul>
-                                <li>GroupId: <code>org.acme</code></li>
+                                <li>GroupId: <code>com.fag</code></li>
                                 <li>ArtifactId: <code>calculadoramvc</code></li>
                                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
-                                <li>Quarkus Version: <code>3.2.4.Final</code></li>
+                                <li>Quarkus Version: <code>3.3.0</code></li>
                             </ul>
                         </div>
                     </div>
